# python-example

./: .dev.enc.env  .editorconfig  .gitignore  .local.enc.env  .pre-commit-config.yaml  .prod.enc.env  .sops.yaml  Makefile  README.md  backend.prod.hcl  pyproject.toml  vars.dev.tfvars  vars.prod.tfvars
.github/: dependabot.yml
.github/workflows/: dependabot.yml  pipeline.yml
.gpg/: 71CB1FD665751F5FB70295C07859E6520888D02E.asc  D0C0AF9AAEAB5A158D8EAAC4FB5BEE00109DFFA1.asc
example/config/: __init__.py  local.json  prod.json
example/handler/: example.py
example/util/: logger.py
infra/: .terraform.lock.hcl  main.tf  terraform.tf
infra/.tf-backend/: backend.tf  backend.tfstate
infra/lambda/: iam.tf  main.tf  outputs.tf  variables.tf
infra/sfn/: cronjob.tf  iam.tf  main.tf  variables.tf
tests/unit/handler/: test_example.py
